spacing fix

--- a/src/components/ProjectsPage/ProjectsPage.css
+++ b/src/components/ProjectsPage/ProjectsPage.css
@@ -73,8 +73,8 @@
 }
 
 .ProjectsPage>.ProjectContainer>.ProjectCard>.ProjectDescription>ul>li {
-    margin: 1%;
-    padding: 10px 13px 10px 13px;
+    margin: 4% 1% 3% 1%;
+    padding: 5px 13px 5px 13px;
     border-radius: 10px;
     background: rgb(240, 240, 240);
 }
@@ -177,6 +177,9 @@
         font-size: 1.7vw;
         justify-content: center;
         margin-bottom: 2%;
+    }
+    .ProjectsPage>.ProjectContainer>.ProjectCard>.ProjectDescription>ul>li {
+        margin: 2% 1% 2% 1%;
     }
     .ProjectsPage>.ProjectContainer>.ProjectCard>.ProjectDescription>ul>li>svg {
         width: 2vw;
